manualmeasurement save UI

--- a/BreuerBPM/BreuerBPM.csproj
+++ b/BreuerBPM/BreuerBPM.csproj
@@ -149,5 +149,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\green_tick.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
